@@ -542,7 +542,7 @@ oftc_server_connected(va_list args)
   {
     struct Service *service = ptr->data;
 
-    introduce_client(service->name);
+    introduce_client(service->name, service->name, TRUE);
   }
 
   return NULL;
