@@ -114,7 +114,7 @@ INIT_MODULE(operserv, "$Revision$")
   clear_serv_tree_parse(&operserv->msg_tree);
   dlinkAdd(operserv, &operserv->node, &services_list);
   hash_add_service(operserv);
-  introduce_client(operserv->name);
+  introduce_client(operserv->name, operserv->name, TRUE);
 
   load_language(operserv->languages, "operserv.en");
 
