@@ -169,9 +169,10 @@ make_service(char *name)
 }
 
 struct Client *
-introduce_client(const char *name)
+introduce_client(const char *name, const char *gecos, char isservice)
 {
-  struct Client *client; 
+  struct Client *client;
+  char *umode;
   dlink_node *ptr;
 
 
@@ -186,14 +187,19 @@ introduce_client(const char *name)
     strlcpy(client->name, name, sizeof(client->name));
     hash_add_client(client);
 
-    register_remote_user(&me, client, "services", me.name, me.name, name);
+    register_remote_user(&me, client, "services", me.name, me.name, gecos);
   }
 
   /* If we are not connected yet, the service will be sent as part of burst */
   if(me.uplink != NULL)
   {
+    if(isservice)
+      umode = "aoS";
+    else
+      umode = "";
+
     execute_callback(send_newuser_cb, me.uplink, name, "services", me.name,
-      name, "");
+      gecos, umode);
     DLINK_FOREACH(ptr, client->channel.head)
     {
       struct Membership *ms = ptr->data;
@@ -208,10 +214,10 @@ struct Client*
 introduce_server(const char *name, const char *gecos)
 {
   struct Client *client;
-    
-  if((client = find_client(name)) != NULL)
+
+  if((client = find_server(name)) != NULL)
     return client;
-  
+
   client = make_client(&me);
 
   client->status |= STAT_SERVER;
@@ -220,8 +226,6 @@ introduce_server(const char *name, const char *gecos)
   dlinkAdd(client, &client->lnode, &client->servptr->server_list);
 
   client->tsinfo = CurrentTime;
-  //I don't think this is needed because it's on the server list
-  //dlinkAdd(client, &client->node, &global_client_list);
 
   strlcpy(client->name, name, sizeof(client->name));
   strlcpy(client->info, gecos, sizeof(client->info));
